# hal-9000

./: .env-sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  init-mongo.js  mongo-init.js
.docker/: bot.Dockerfile
.github/workflows/: rust.yml
doc/: all.html  fn.main.html  index.html  sidebar-items.js
doc/controller/: index.html  sidebar-items.js
doc/controller/bot/: index.html  sidebar-items.js  struct.MainController.html
doc/controller/database/: fn.build_date.html  index.html  sidebar-items.js  struct.DatabaseConnector.html  struct.Logs.html  struct.Message.html
doc/controller/filter/: index.html  sidebar-items.js  struct.Filter.html
doc/controller/giveaway/: index.html  sidebar-items.js  struct.GiveawayController.html
doc/controller/vote/: fn.result_string_builder.html  index.html  sidebar-items.js  struct.VoteController.html
doc/util/: index.html  sidebar-items.js
doc/util/config/: fn.eval_config.html  fn.get_db_config.html  fn.get_lang.html  fn.get_logger_level.html  index.html  sidebar-items.js
doc/util/get_item/: fn.get_cmd_elem.html  index.html  sidebar-items.js
doc/util/regex/: index.html  sidebar-items.js  struct.COMMAND.html  struct.ENDGIVEAWAY.html  struct.ENDVOTE.html  struct.ENTERGIVEAWAY.html  struct.PING.html  struct.STARTGIVEAWAY.html  struct.STARTVOTE.html  struct.VOTE.html
src/: controller.rs  main.rs  util.rs
src/controller/: bot.rs  chatClient.rs  clientConfig.rs  client_config.rs  database.rs  dictionary_de.json  filter.rs  filter_controller.rs  giveaway.rs  giveaway_controller.rs  main_controller.rs  vote.rs  vote_controller.rs
src/data/: dictionary_en.json
src/model/: database.rs  twitchMessage.rs
src/util/: config.rs  get_item.rs  regex.rs  regex_commands.rs  send.rs
(+3 files in other folders)
