[package]
name = "HAL9000-Chat-Bot"
version = "0.1.0"
authors = ["Robin und Sebastian"]
edition = "2018"
default-run = "database"

[[bin]]
name="hal_9000"
path="src/main.rs"
[[bin]]
name="database"
path="src/model/database.rs"
[[bin]]
name = "filter"
path = "src/controller/filter.rs"
[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
irc = "0.13.5"
mongodb = "1.0.0"
futures = "0.3.5"
tokio = "0.2.22"
chrono = "0.4.13"
serde_json = "1.0.57"
regex = "1.3.9"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-threaded"]
